2001-03-21  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Version 0.27.

	* output-fig.c (get_fig_colour): Added static keyword.
	(fig_col_init): Likewise.

	* output-emf.c: Added static keyword to all variable
	and functions except output_emf_writer.

	* input-bmp.[ch] (bmp_load_image): Renamed ReadBMP.

	* input-tga.[ch] (tga_load_image): Renamed ReadTGA.

2001-03-21  Martin Weber <martweb@gmx.net>

	Message-ID: <3AB7AD7B.CA58CE8A@gmx.net>.
	* README: Updated.
	
2001-03-16  Peter Cucka <pcucka@anim.dreamworks.com>

	Message-ID: <3AB26304.182F7AB2@anim.dreamworks.com>:
	* fit.c: Fixed a bug that, in centerline mode, caused a zero-length
	line segment to be added to the end of every open curve.

	* output-er.c: Modified out_splines() to correctly output open
 	curves, taking into account the above changes to fit.c.

2001-03-20  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: Check ImageMagick version is higher 
	than 5.2.1. Use AC_MSG_WARN instead of AC_MSG_ERROR
	if ImageMagick is not found. The user can build 
	autotrace without ImageMagick.
	This change is required by Martin.
	Message-ID: <3AB26698.DFC2341D@gmx.net>.

2001-03-15  Martin Weber <martweb@gmx.net>

	Message-ID: <3AB26698.DFC2341D@gmx.net>.
	* input-magick.c (magick_load_image): 
	dropped the support of versions older than 5.2.1.

2001-03-17  Martin Weber <martweb@gmx.net>

	Message-ID: <3AB25B23.27EDD0C1@gmx.net>.
	* output-emf.c:  Images with width or height > 
	655 were distorted.

2001-03-17  Peter Cucka <pcucka@anim.dreamworks.com>

	* pxl-outline.c: Adding some explicit casts of boolean 
	expressions to 'bool's, to keep the IRIX compiler from 
	warning about an "enumerated type mixed with another type". 
	(Logged by Masatake)
	
2001-03-16  Masatake YAMATO  <yamato@redhat.com>

	Applied a patch from Martin.
	Message-ID: <3AB12888.E31072DC@gmx.net>.
	* output-emf.c: Now I fixed a bug in output-emf.c and 
	adopted it so that the generated emf files are compatible 
	to CorelDraw 9.
